--- a/config.yaml
+++ b/config.yaml
@@ -19,50 +19,38 @@ tgchannel:
   - https://t.me/bamboo_vpn
   - https://t.me/yaney_01
   #下面是自己添加的，好像都是分享的节点信息，订阅源抓不到
-  - https://t.me/v2list           #分享的是节点信息，https://fanqiangdang.com提供
+  #- https://t.me/v2list           #分享的是节点信息，https://fanqiangdang.com提供
   - https://t.me/freev2rays       #分享的是节点信息
-  - https://t.me/vmess_tg         #有源，有节点
+  #- https://t.me/vmess_tg         #有源，有节点
   - https://t.me/mftizi           #分享的是节点信息
-  - https://t.me/ssrList          #分享的是节点信息，https://fanqiangdang.com提供
-  - https://t.me/aifenxiang2020   #分享的是节点信息
-  - https://t.me/p2psharing       #订阅源
-  - https://t.me/sharingnode      #节点地址http://file.52nfw.cn/word/obtain.php?user=111111&id=1
+  #- https://t.me/ssrList          #分享的是节点信息，https://fanqiangdang.com提供
+  #- https://t.me/aifenxiang2020   #分享的是节点信息
+  #- https://t.me/sharingnode      #节点地址http://file.52nfw.cn/word/obtain.php?user=111111&id=1
   #下面是自己添加的 LRC
-  #- https://t.me/app_jiedian
   - https://t.me/wxdy666
-  - https://t.me/jcvpn
+  #- https://t.me/jcvpn
   # 2024-02-29 新增
   - https://t.me/allv2board
   - https://t.me/v2raydailyupdate
    # 2024-03-01 新增
   - https://t.me/freeVPNjd
-  - https://t.me/baipiaowansui
   - https://t.me/juzibaipiao
   - https://t.me/zyfxlnn
   - https://t.me/ShareCentrePro
-  - https://t.me/murandepindao
-  - https://t.me/aries_init
-  - https://t.me/forwardv2ray
+  #- https://t.me/murandepindao
   - https://t.me/xiaoxinv
-  - https://t.me/bpjzx2
-  - https://t.me/qwjhfx
-  - https://t.me/ltscxk
-  # - https://t.me/aiuvpn
-  - https://t.me/jiedian24
+  #- https://t.me/bpjzx2
+  #- https://t.me/ltscxk
+  #- https://t.me/aiuvpn
   - https://t.me/Free166
-  - https://t.me/baipiaojiedian
   - https://t.me/changfengchannel
-  - https://t.me/freeshadowsock
-  - https://t.me/onessr
-  - https://t.me/ShadowsocksRssr
-  - https://t.me/ShareCentre  
-  - https://t.me/ssrshares
+  #- https://t.me/freeshadowsock
+  #- https://t.me/onessr
+  - https://t.me/ShareCentre
   - https://t.me/SSRSUB
-  # - https://t.me/vpnchina
   # 2024-03-01 新增
   - https://t.me/suyucom
-  # - https://t.me/freeyule
-  - https://t.me/vpn880
-  # - https://t.me/plus8889
+  - https://t.me/freeyule
+  #- https://t.me/vpn880
   - https://t.me/ZDYZ2
 
