--- a/.github/workflows/fetch.yaml
+++ b/.github/workflows/fetch.yaml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron: '5 */6 * * *'
+    - cron: '* */6 * * *'
   watch:
     types: started
   # - cron: '0 3,12 * * *'
